--- a/templates/all.html
+++ b/templates/all.html
@@ -10,13 +10,14 @@
         <div class="card mb-4">
           <div class="card-body align-right">
             <p class="lead float-left d-inline-block mt-2 mb-0"><strong>{{ n_teachers }} преподавателей в базе</strong></p>
-            <form action="/302/" class="float-right d-inline-block" method="GET">
+            <form action="/all/" class="float-right d-inline-block" method="POST">
+              {{form.csrf_token()}}
               <div class="form-inline">
-                <select class="custom-select my-1 mr-2" id="inlineFormCustomSelectPref">
-                  <option selected>В случайном порядке</option>
-                  <option value="3">Сначала лучшие по рейтингу</option>
-                  <option value="1">Сначала дорогие</option>
-                  <option value="2">Сначала недорогие</option>
+                <select class="custom-select my-1 mr-2" id="sorting" name="sorting">
+                  {% for subfield in form.sorting %}
+                  {{ subfield() }}
+                  {{ subfield.label() }}
+                  {% endfor %}
                 </select>
                 <button type="submit" class="btn btn-primary my-1">Сортировать</button>
               </div>
