--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
       <h1 class="h1 text-center mx-auto mt-4 py-5"><strong>Найдите идеального <br>репетитора английского, <br>занимайтесь онлайн</strong></h1>
       <div class="text-center mb-5">
         <div class="btn-group mx-auto mb-0" role="group" aria-label="Basic example">
-          {% for key, val in goals.items() %}
-          <a href="/goal/{{ key }}/" class="btn btn-outline-secondary">{{ val.pic }} {{ val.title }}</a>
+          {% for goal in goals %}
+          <a href="/goal/{{ goal.id }}/" class="btn btn-outline-secondary">{{ goal.symbol }} {{ goal.name }}</a>
           {% endfor %}
         </div>
       </div>
