--- a/templates/booking.html
+++ b/templates/booking.html
@@ -5,34 +5,34 @@
   <main class="container mt-3">
     <div class="row mt-5">
       <div class="col-10 col-md-6 offset-1 offset-md-3 mb-3">
-        <form action="/booking_done/" class="card mb-3" method="POST">
+        <form action="{{request.path}}" class="card mb-3" method="POST">
           <div class="card-body text-center pt-5">
             <img src="{{ teacher.picture }}" class="mb-3 avatar" width="95" alt="">
             <h2 class="h5 card-title mt-2 mb-2">{{ teacher.name }}</h2>
             <p class="my-1">Запись на пробный урок</p>
-            <p class="my-1">{{ week_days[day] }}, {{time}}:00</p>
+            <p class="my-1">{{ week_days[weekday] }}, {{ time }}:00</p>
           </div>
           <hr />
           <div class="card-body mx-3">
 
             <div class="row">
               {{ form.csrf_token }}
-              {{ form.clientWeekday(class_="form-control", value=day) }}
-              {{ form.clientTime(class_="form-control", value=time) }}
-              {{ form.clientTeacher(class_="form-control", value=teacher.id) }}
+              {{ form.weekday(class_="form-control", value=weekday) }}
+              {{ form.time(class_="form-control", value=time) }}
+              {{ form.teacher(class_="form-control", value=teacher.id) }}
             </div>
 
-            {{ form.clientName.label(class_="mb-1 mt-2") }}
-            {% for error in form.clientName.errors %}
+            {{ form.name.label(class_="mb-1 mt-2") }}
+            {% for error in form.name.errors %}
             <div class="alert alert-danger" role="alert"> {{ error }} </div>
             {% endfor %}
-            {{ form.clientName(class_="form-control", placeholder="Введите свое имя") }}
+            {{ form.name(class_="form-control", placeholder="Введите свое имя") }}
 
-            {{ form.clientPhone.label(class_="mb-1 mt-2") }}
-            {% for error in form.clientPhone.errors %}
+            {{ form.phone.label(class_="mb-1 mt-2") }}
+            {% for error in form.phone.errors %}
             <div class="alert alert-danger" role="alert"> {{ error }} </div>
             {% endfor %}
-            {{ form.clientPhone(class_="form-control mask-phone", placeholder="Введите свой телефон") }}
+            {{ form.phone(class_="form-control mask-phone", placeholder="Введите свой телефон") }}
 
             {{ form.submit(class_="btn btn-primary btn-block mt-4") }}
 
