--- a/templates/goal.html
+++ b/templates/goal.html
@@ -3,7 +3,7 @@
 {% block container %}
 
   <main class="container mt-3">
-    <h1 class="h1 text-center w-50 mx-auto mt-1 py-5 mb-4"><strong>{{ goal.pic }}<br />Преподаватели <br> {{ goal.title }}</strong></h1>
+    <h1 class="h1 text-center w-50 mx-auto mt-1 py-5 mb-4"><strong>{{ goal.symbol }}<br />Преподаватели <br> {{ goal.name }}</strong></h1>
     <div class="row">
       <div class="col-12 col-lg-10 offset-lg-1 m-auto">
         {% for teacher in teachers|sort(reverse=true, attribute="rating") %}
